[package]
name = "grpc-perf-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "perftest_server"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tonic = "0.12"
prost = "0.13"
prost-types = "0.13"
futures = "0.3"
futures-util = "0.3"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
async-stream = "0.3"

[build-dependencies]
tonic-build = "0.12"
